t+bg:[[саблезъб]] ([[WT:EDIT|Assisted]]) <sabre-toothed#63934535>

--- a/en/s/sabre-toothed.801836.wikitext
+++ b/en/s/sabre-toothed.801836.wikitext
@@ -15,6 +15,7 @@
 
 ====Translations====
 {{trans-top|having massive curved upper canine teeth}}
+* Bulgarian: {{t|bg|саблезъб}}
 * Finnish: {{t|fi|sapelihampainen}}
 * German: {{t|de|Säbelzahn-}}
 {{trans-mid}}
