--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -19,6 +19,7 @@
 ====Translations====
 {{trans-top|prehistoric cat}}
 * Arabic: {{t|ar|نِمْر ذُو صَابِر أَسْنَان|m}}, {{t|ar|نِمْرَة ذَات صَابِر أَسْنَان|f}}
+* Bulgarian: {{t|bg|саблезъб тигър|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|劍齒虎|sc=Hani}}, {{t+|cmn|剑齿虎|tr=jiànchǐhǔ|sc=Hani}}
 * Danish: {{t|da|sabelkat|c}}
