--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -148,6 +148,7 @@ From {{inh|pt|roa-opt|mundo}}, from {{inh|pt|la|mundus||world}}.
 
 ===Pronunciation===
 {{pt-IPA}}
+* {{a|Rural Central Brazil}} {{IPA|pt|/ˈmũ.dʷ/}}
 * {{hyph|pt|mun|do}}
 
 ===Noun===
