--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -18,7 +18,7 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 
 ===Etymology 2===
 {{root|en|ine-pro|*keh₂p-}}
-Uncertain. Perhaps from {{inh|en|ang|copian||to plunder; pillage; steal}}; or possibly from {{der|en|frm|caper||to capture}}, from {{der|en|la|capiō||to seize, to grasp}}; or possibly from {{der|en|nl|kapen||to seize, to hijack}}, from {{der|en|ofs|kāpia||to buy}}. Compare also {{cog|enm|copen||to buy}}, from {{cog|dum|copen}}.
+{{unk|en|title=Origin uncertain}}. Perhaps from {{inh|en|enm|*coppen}}, {{m|enm|*copen}}, from {{inh|en|ang|copian|t=to plunder; pillage; steal}}; or possibly from {{der|en|frm|caper|t=to capture}}, from {{der|en|la|capiō|t=to seize, grasp}}; or possibly from {{der|en|nl|kapen|t=to seize, to hijack}}, from {{der|en|ofs|kāpia|t=to buy}}. Compare also {{cog|enm|copen|t=to buy}}, from {{cog|dum|copen}}.
 
 ====Verb====
 {{en-verb}}
