--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -66,7 +66,7 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 {{trans-bottom}}
 
 ===Etymology 3===
-Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}} above, in reference to arresting criminals.
+Short for {{m|en|copper||police officer}}, itself from the verb {{m|en|cop|t=to lay hold of}} above, in reference to arresting criminals.
 
 ====Noun====
 {{en-noun}}
