--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -77,6 +77,7 @@ Short for {{m|en|copper||police officer}}, itself from the verb {{m|en|cop|t=to 
 =====Derived terms=====
 {{col4|en
 |copless
+|coppish
 |coppy
 |cop shop
 |copaganda
