--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -86,6 +86,7 @@ Short for {{m|en|copper||police officer}}, itself from the verb {{m|en|cop|t=to 
 |death by cop
 |kotong cop
 |ninja cop
+|rent-a-cop
 |robocop
 |suicide by cop
 |telecop
