/* Etymology 2 */ wrong year <cop#63940761>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 #* '''2005''', Martin Torgoff, ''Can't Find My Way Home'', Simon & Schuster, page 10:
 #*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
 # {{lb|en|transitive}} To (be forced to) [[take]]; to [[receive]]; to [[shoulder]]; to [[bear]], especially [[blame]] or [[punishment]] for a particular instance of [[wrongdoing]].
-#: When caught, he would often '''cop''' a vicious blow from his father
+#: {{uxi|en|When caught, he would often '''cop''' a vicious blow from his father.}}
 # {{lb|en|transitive|trainspotting|slang}} To see and record a [[railway]] [[locomotive]] for the first time.
 # {{lb|en|transitive}} To [[steal]].
 # {{lb|en|transitive}} To [[adopt]].
@@ -41,10 +41,8 @@ From {{inh|en|enm|coppe}}, from {{inh|en|ang|*coppe}}, as in {{m|ang|ātorcoppe|
 #: ''Harold '''copped''' to being known as "Dirty Harry".''
 #* {{quote-book|en|title=Mr. Paradise|page=295| author={{w|Elmore Leonard}}| year=2005| passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
 # {{lb|en|transitive|slang}} For a [[pimp]] to recruit a [[prostitute]] into the [[stable]].
-#* '''2009''', Iceberg Slim, ''Pimp'' (page 90)
-#*: I said, 'Tell your tricks to call you here.'<br>She laid the bearskin and freaked the joint off with her lights and other crap. Except for the fake stars it was a fair mock-up of her pad where I had '''copped''' her.
-#* '''2011''', Shaheem Hargrove, Sharice Cuthrell, ''The Rise and Fall of a Ghetto Celebrity'' (page 55)
-#*: The code was to call a pimp and tell him you have his hoe plus turn over her night trap but that was bull because the HOE was out of his stable months before I '''copped''' her.
+#* {{quote-book|en|year_published=2009|year=1967|author={{w|Iceberg Slim}}|title=Pimp|page=90|passage=I said, 'Tell your tricks to call you here.'<br>She laid the bearskin and freaked the joint off with her lights and other crap. Except for the fake stars it was a fair mock-up of her pad where I had '''copped''' her.}}
+#* {{quote-book|year=2011|author=Shaheem Hargrove|author2=Sharice Cuthrell|title=The Rise and Fall of a Ghetto Celebrity|page=55|en|passage=The code was to call a pimp and tell him you have his hoe plus turn over her night trap but that was bull because the HOE was out of his stable months before I '''copped''' her.}}
 
 =====Derived terms=====
 {{col3|en
