/* Translations */ <she-goat#63950573>

--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -29,7 +29,7 @@ From {{af|en|she-|goat}}.
 * Gothic: {{t|got|𐌲𐌰𐌹𐍄𐍃|f}}
 * Greek: {{t+|el|αίγα|f}}
 *: Ancient: {{t|grc|αἴξ|f}}
-* Hebrew: {{t+|he|עז|tr=éz|f}}
+* Hebrew: {{t+|he|עֵז|tr=éz|f}}
 * Japanese: {{t+|ja|山羊|tr=yagi}}
 * Kashmiri: {{t|ks|ژھاوٕج}}
 {{trans-mid}}
