t+de:[[zu]] t+de:[[für]] ([[WT:EDIT|Assisted]]) <at#63953578>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -315,7 +315,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Faroese: {{t-needed|fo}}
 * Finnish: {{t+|fi|à}} {{q|unit price}}
 * French: {{t+|fr|à}}
-* German: {{t-needed|de}}
+* German: {{t+|de|zu}}, {{t+|de|für}}
 * Greek: ''periphrastically''
 *: Ancient Greek: {{t-needed|grc}}
 * Hungarian: {{t-needed|hu}}
