--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|en|ɛrɪt}}
 
 ===Etymology 1===
-{{PIE word|en|bʰṓr}}
+{{root|en|ine-pro|*bʰer-}}
 From {{inh|en|enm|furet}}, {{m|enm|ferret}}, from {{der|en|fro|furet}}, from {{der|en|VL.|*furittum||weasel, ferret}}, diminutive of {{der|en|la|fūr||thief}}.
 
 ====Noun====
