t+ne:[[उद्र]] ([[WT:EDIT|Assisted]]) <otter#63956103>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -114,6 +114,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Mi'kmaq: {{t|mic|giwnig|an}}
 * Mon: {{t|mnw|ဖေံ}}
 * Navajo: {{t|nv|tábąąstíín}}
+* Nepali: {{t|ne|उद्र }}
 * Northern Sami: {{t|se|čeavrris}}
 * Norwegian:
 *: Bokmål: {{t+|nb|oter|m}}
