--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -109,7 +109,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 =====Translations=====
 {{trans-top|grinding apparatus}}
 * Adyghe: {{t|ady|шъхьалы}}
-* Albanian: {{t+|sq|mulli|m}}
+* Albanian: {{t+|sq|thyese|f}}, {{t+|sq|mulli|m}}
 * Arabic: {{t|ar|مَطْحَنَة|f}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܪܚܝܐ|f|tr=raḥyā}}
