--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -72,6 +72,9 @@ Short for {{m|en|copper||police officer}}, itself from the verb {{m|en|cop|t=to 
 # {{lb|en|informal}} A [[police officer]] or [[prison guard]].
 #: {{syn|en|Thesaurus:police officer}}
 
+=====Usage notes=====
+* Originally a slang term, but now in general use, including by journalists and police. Terms like ''police officer'' are generally considered more respectful.
+
 =====Derived terms=====
 {{col4|en
 |copless
