--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -8,6 +8,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈɜːmɪn/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-ermine.wav|Audio (Southern England)}}
 * {{a|GA}} {{IPA|en|/ˈɝmɪn/}}
 * {{rhymes|en|ɜː(ɹ)mɪn}}
 
