--- a/en/n/nooner.802769.wikitext
+++ b/en/n/nooner.802769.wikitext
@@ -4,8 +4,8 @@
 {{suffix|en|noon|er}}
 
 ===Pronunciation===
-* {{IPA|en|/ˈnuːnəɹ/}}
-*: {{rhymes|en|uːnə(r)}}
+* {{IPA|en|/ˈnuːnɚ/}}
+* {{rhymes|en|uːnə(ɹ)}}
 
 ===Noun===
 {{en-noun}}
