--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -16,7 +16,8 @@
 {{wikipedia|lang=en}}
 
 ===Pronunciation===
-* {{rhymes|en|ěx}}
+* {{IPA|en|/biːˈɛks/}}
+* {{rhymes|en|ɛks}}
 
 ===Etymology 1===
 Abbreviation
