--- a/en/m/mossback.720205.wikitext
+++ b/en/m/mossback.720205.wikitext
@@ -5,7 +5,7 @@
 {{multiple images
 |direction = vertical
 |image1 = Chelydra serpentina at Waubay National Wildlife Refuge, South Dakota, USA.jpg
-|image2 = Largemouth bass fish underwater animal in natural habitat micropterus salmoides.jpg
+|image2 = 1351 largemouth bass (Micropterus salmoides) 300 dpi.jpg
 |caption2 = Two animals known as mossbacks: a {{vern|common snapping turtle}} ({{taxlink|Chelydra serpentina|species|ver=210903}}; ''top''; ''sense 3.2'') at the {{w|Waubay National Wildlife Refuge}} in [[South Dakota]], USA; and a [[largemouth bass]] (''[[Micropterus salmoides]]''; ''bottom''; ''sense 3.4'').
 }}
 
