--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -66,6 +66,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|transitive}} To make [[flyblown]], to defile, especially with fly eggs.
 #* {{RQ:Shakespeare Antony|V|ii|365|1|Shall they hoyſt me vp,<br>And ſhew me to the ſhowting [[varletry|Varlotarie]]<br>Of cenſuring Rome? Rather a ditch in Egypt,<br>Be gentle graue vnto me, rather on Nylus mudde<br>Lay me ſtarke-nak'd, and let the water-Flies<br>'''Blow''' me into abhorring;}}
 #* {{RQ:Shakespeare Tempest|III|i|11|1|''[[w:Ferdinand (The Tempest)|Fer.]]'' I am, in my condition<br>A Prince (''Miranda'') I do thinke a King<br>(I would not ſo) and would no more endure<br>This wodden ſlauerie, then to ſuffer<br>The [[flesh-fly|fleſh-flie]] '''blow''' my mouth: heare my ſoule ſpeake.}}
+#* {{quote-book|1=en|year=1938|author=Norman Lindsay|authorlink=Norman Lindsay|title=Age of Consent|publisher=Ure Smith|location=Sydney|year_published=1962|page=78|passage=That decision was given an added kick by fury when he found that Podson had left the safe door open, and flies had '''blown''' the meat.}}
 # {{lb|en|obsolete}} To spread by report; to publish; to disclose.
 #* {{RQ:Dryden PAA}}
 #*: Through the court his courtesy was '''blown'''.
