t+es:[[reanimación]] ([[WT:EDIT|Assisted]]) <reanimation#64001483>

--- a/en/r/reanimation.741524.wikitext
+++ b/en/r/reanimation.741524.wikitext
@@ -19,6 +19,7 @@
 {{trans-mid}}
 * Indonesian: {{t|id|reanimasi}}
 * Russian: {{t+|ru|реанима́ция|f}}
+* Spanish: {{t|es|reanimación|f}}
 {{trans-bottom}}
 
 ===Anagrams===
