--- a/en/v/vectorial.855963.wikitext
+++ b/en/v/vectorial.855963.wikitext
@@ -47,7 +47,7 @@
 ===Adjective===
 {{pt-adj|vectoria|l}}
 
-# {{superseded spelling of|pt|vetorial}}
+# {{pt-superseded-silent-letter-1990|vetorial}}
 
 ----
 
