--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -20,6 +20,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 # The white [[fur]] of this animal, traditionally seen as a [[symbol]] of [[purity]] and used for judges' robes.
 # {{lb|en|by extension|figuratively}} The [[office]] of a [[judge]].
 # {{lb|en|tincture}} A white [[field]] with black spots.
+# Any of various moths, especially in the family {{w|Yponomeutidae}}
 
 ====Synonyms====
 * {{l|en|stoat}} {{qualifier|British}}
