--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -301,6 +301,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{trans-mid}}
 * Kyrgyz: {{t+|ky|ышкыруу}}
 * Lao: {{t|lo|ຖິວ}}, {{t|lo|ຖິວປາກ}}, {{t|lo|ຜິວ}}
+* Latin: {{t|la|sibilare}}
 * Latvian: {{t|lv|svilpt}}
 * Lithuanian: {{t|lt|švilpti}}
 * Luxembourgish: {{t|lb|päifen}}
