t+sq:[[nuselalë e borës]] t+sq:[[nuselalë bishtzezë]] ([[WT:EDIT|Assisted]]) <ermine#64020707>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -29,7 +29,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 
 ====Translations====
 {{trans-top|''Mustela erminea''}}
-* Albanian: {{t|sq|ermelina|?}}
+* Albanian: {{t|sq|ermelina|?}}, {{t|sq|nuselalë e borës|f}}, {{t|sq|nuselalë bishtzezë|f}}
 * Arabic: {{t|ar|قَاقِم|m}}
 * Armenian: {{t+|hy|կնգում}}, {{t|hy|սպիտակ աքիս}}, {{t+|hy|ախազ}}
 * Bashkir: {{t|ba|аҫ}}
