--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -4,7 +4,7 @@
 From {{inh|ast|la|parentem}}, accusative singular of {{m|la|parēns}}.
 
 ===Adjective===
-{{ast-adj|f=parienta}}
+{{head|ast|adjective}}
 
 # [[related]]
 
