--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -39,10 +39,10 @@
 * Polish: (język) {{t|pl|zachodniofryzyjski|m}}
 * Portuguese: {{t+|pt|frísio|m}}, {{t+|pt|frisão|m}}
 * Russian: {{t|ru|западнофри́зский|m}} {{qualifier|язы́к}}, {{t+|ru|фри́зский|m}} {{qualifier|язы́к}}
-* Scots: {{t|sco|Wast Frisie}}, {{t|sco|Wast Frisian}}
-* Spanish: {{t+|es|frisón|m}}, {{t+|es|frisio|m}}
+* Scots: {{t|sco|Wast Frisian}}, {{t|sco|Wastren Frisian}}
+* Spanish: {{t+|es|frisón occidental|m}}, {{t+|es|frisio occidental|m}}
 * Swedish: {{t+|sv|västfrisiska|c}}
-* West Frisian: {{t|fy|Westerlauwersk Frysk|n}}, {{t|fy|Westfrysk|n}}, {{t|fy|West-Frysk|n}}, {{t+|fy|Frysk|n}} {{qualifier|common name}}
+* West Frisian: {{t|fy|Westerlauwersk Frysk|n}}, {{t|fy|Westfrysk|n}}, {{t|fy|West-Frysk|n}}, {{t+|fy|Frysk|n}} {{qual|common name}}
 {{trans-bottom}}
 
 {{trans-top|the Western Frisian dialect of Dutch}}
