--- a/en/i/incommunicable.741075.wikitext
+++ b/en/i/incommunicable.741075.wikitext
@@ -20,3 +20,10 @@
 * Greek: {{t+|el|αμετάδοτος}}
 {{trans-mid}}
 {{trans-bottom}}
+----
+==French==
+
+===Adjective===
+{{fr-adj}}
+
+# {{l|en|incommunicable}}
