--- a/en/i/inculcation.741078.wikitext
+++ b/en/i/inculcation.741078.wikitext
@@ -19,3 +19,10 @@
 * {{l|en|inculcate}}
 
 [[Category:English 4-syllable words]]
+----
+==French==
+
+===Noun===
+{{fr-noun|f}}
+
+# {{l|en|inculcation}}
