t+tr:[[katılmak]] ([[WT:EDIT|Assisted]]) <attend#64038800>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -112,6 +112,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Russian: {{t+|ru|посеща́ть|impf}}, {{t+|ru|прису́тствовать|impf}}
 * Spanish: {{t+|es|asistir}}, {{t+|es|acudir}}
 * Swedish: {{t+|sv|närvara}}, {{t+|sv|delta}}
+* Turkish: {{t+|tr|katılmak}}
 * Ukrainian: {{t|uk|бути присутнім}}
 * Welsh: {{t+|cy|mynychu}}
 {{trans-bottom}}
