t+de:[[Insel]] ([[WT:EDIT|Assisted]]) <island#64054906>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -373,7 +373,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Faroese: {{t+|fo|oyggj|f}}
 * Finnish: {{t+|fi|saareke}}
 * French: {{t+|fr|île|f}}
-* German: {{t-needed|de}}
+* German: {{t+|de|Insel|f}}
 * Greek: {{t+|el|νησί|n}}, {{t+|el|νησίδα|f}}
 *: Ancient: {{t|grc|νῆσος|f}}
 * Hebrew: {{t+|he|אִי|tr=i|m|sc=Hebr}}
