--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -108,6 +108,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Italian: {{t+|it|bastone|m}}, {{t+|it|asta|f}}
 {{trans-mid}}
 * Japanese: {{t+|ja|杖|tr=tsue|sc=Jpan}}, {{t+|ja|棒|tr=bō|sc=Jpan}}
+* Javanese: {{t|jv|tongkat}}
 * Latin: {{t|la|baculum}}, {{t|la|scīpiō|m}}
 * Macedonian: {{t|mk|стап|m}}
 * Malagasy: {{t+|mg|langilangy}}, {{t+|mg|tehina}}
