--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -127,7 +127,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|b
 * Norwegian:
 *: Bokmål: {{t|nb|bambus|m}}
 *: Nynorsk: {{t|nn|bambus|m}}
-* Old Javanese: {{t|kaw|pring}}
+* Old Javanese: {{t|kaw|priṅ}}
 * Paiwan: {{t|pwn|qau}}
 * Pashto: {{t+|ps|باڼس}}
 * Persian: {{t+|fa|خیزران|tr=xayzarân}}
