--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -42,6 +42,8 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 #*: Full-page and double-page colour advertisements in the Sunday colour magazines usually '''bleed''' off the page' (or are ''''bled''' to the margin'), {{...}}
 #* '''2004''', Dorothy A. Bowles, ‎Diane L. Borden, ''Creative Editing'' (page 361)
 #*: Too, '''bleeding''' beyond margins provides editors with several picas of space for more layout.
+# {{lb|en|finance|intransitive}} To [[lose]] [[money]].
+# ''Most of the sectors are '''bleeding''', particularly the resources sector.''
 
 ====Derived terms====
 {{col3|en
