--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -33,7 +33,7 @@
 * Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
 * French: {{t+|fr|sans blague}}, {{qualifier|colloquial}} {{t+|fr|sans dec}}
 {{trans-mid}}
-* German: {{t-needed|de}}
+* German: {{t|de|ach was}}, {{t|de|was du nicht sagst}}
 * Italian: {{t|it|eh si}}, {{t|it|eh già}}, {{t|it|proprio così}}
 * Russian: {{t-needed|ru}}
 * Spanish: {{t-needed|es}}
