--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -17,7 +17,7 @@
 *: Mandarin: {{t+|cmn|當真|alt=當真？！|sc=Hani}}, {{t+|cmn|当真|tr=dàngzhēn?!|alt=当真？！|sc=Hani}}, {{t|cmn|不會吧|sc=Hani}}, {{t|cmn|不会吧|tr=bùhuìba|sc=Hani}}
 * Finnish: {{t|fi|ihanko totta}}, {{t|fi|ei kai}}
 * French: {{t+|fr|sans blague}}, {{t+|fr|sans dec}}, {{qualifier|colloquial}} {{t+|fr|la vache}}
-* German: {{qualifier|colloquial|vulgar}} {{t|de|ohne Scheiß}}, {{qualifier|colloquial}} {{t|de|im Ernst}}, {{t+|de|echt}}
+* German: {{t|de|[[kein]] [[Quatsch]]}}, {{qualifier|colloquial}} {{t|de|im [[Ernst]]}}, {{t+|de|echt}}
 {{trans-mid}}
 * Italian: {{t+|it|sul serio}}, {{t+|it|seriamente}}, {{t|it|scherzi a parte}}, {{t|it|ma dai}}, {{t|it|non dirmi}}
 * Portuguese: {{t|pt|não brinca}}
