t+nb:[[forpliktet]] t-balance t+nb:[[begrenset]] ([[WT:EDIT|Assisted]]) <bound#64077654>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -66,8 +66,10 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 * Finnish: {{t+|fi|velvollinen}}
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
 * Hungarian: {{t+|hu|köteles}}
-{{trans-mid}}
 * Italian: {{t+|it|obbligato|m}}, {{t+|it|confinato|m}}, {{t+|it|tenuto|m}}, {{t+|it|costretto}}, {{t+|it|portato}}
+{{trans-mid}}
+* Norwegian:
+*: Bokmål: {{t|nb|forpliktet}}
 * Occitan: {{t|oc|obligat}}, {{t|oc|tengut}}, {{t|oc|constrench}}
 * Portuguese: {{t+|pt|obrigado}}
 * Romanian: {{t+|ro|obligat|m}}
@@ -79,8 +81,10 @@ From {{inh|en|enm|bound}}, {{m|enm|bund|pos=preterite}} and {{m|enm|bounden}}, {
 * Danish: {{t|da|begrænset}}
 * Finnish: {{t+|fi|sidottu}}
 * Hungarian: {{t+|hu|kötött}}, {{t+|hu|korlátozott}}, {{t|hu|kényszerített}}, {{t|hu|kényszerült}}
-{{trans-mid}}
 * Italian: {{t+|it|obbligato}}, {{t+|it|costretto}}, {{t+|it|vincolato}}, {{t+|it|limitato}}
+{{trans-mid}}
+* Norwegian:
+*: Bokmål: {{t+|nb|begrenset}}
 * Russian: {{t+|ru|свя́занный}}, {{t+|ru|обяза́нный}}
 * Sanskrit: {{t+|sa|सित}}
 * Spanish: {{t+|es|limitado}}
