removed [[Category:en:Cnidarians]]; added [[Category:en:Hydrozoans]] using [[Help:Gadget-HotCat|HotCat]] <siphonophore#64085175>

--- a/en/s/siphonophore.801198.wikitext
+++ b/en/s/siphonophore.801198.wikitext
@@ -22,4 +22,4 @@ From {{confix|en|siphono|phore}}.
 * {{specieslite|Siphonophorae}}
 * {{comcatlite|Siphonophorae}}
 
-[[Category:en:Cnidarians]]
+[[Category:en:Hydrozoans]]
