--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -6,7 +6,7 @@
 Borrowed from {{bor|en|es|Oaxaca}}, from {{der|en|nci|Huāxyacac}}, from {{m|nci|Huāxacatzin|t=name of a hill}}, from {{m|nci|huāxin|t=a type of tree}} + {{m|nci|yacatl|t=nose}} + {{m|nci|-tzin|t=honorific suffix}}.
 
 ===Pronunciation===
-* {{a|US}} {{IPA|en|/wə.ˈhæ.kə/|/wə.ˈhɑː.kə/|/wɑː.ˈhɑː.kɑː/}}
+* {{a|US}} {{IPA|en|/wə.ˈhæ.kə/|/wə.ˈhɑː.kə/|/wɑː.ˈhɑː.kɑː/|/wɑˈʃɑː.kə/}}
 * {{audio|en|Es-Oaxaca.ogg|Audio}}
 
 ===Proper noun===
