t+mrw:[[timbang]] ([[WT:EDIT|Assisted]]) <weight#64093691>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -168,6 +168,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Macedonian: {{t|mk|тежина|f|sc=Cyrl}}
 * Malay: {{t+|ms|berat}}
 * Maori: {{t-needed|mi}}
+* Maranao: {{t|mrw|timbang}}
 * Mongolian: {{t+|mn|жин}}, {{t+|mn|дэнс}}
 * Norwegian:
 *: Bokmål: {{t+|nb|vekt|m|f}}
