--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -263,7 +263,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Mansaka: {{t|msk|baboy}}
 * Manx: {{tt|gv|muc|f}}
 * Maori: {{tt|mi|poaka}}
-* Maranao: {{t|mrw|beboi}}, {{t|mrw|pandak}}
+* Maranao: {{t|mrw|beboy}}, {{t|mrw|pandak}}
 * Marathi: {{tt|mr|डुकर|m}}
 * Mazanderani: {{tt|mzn|خی|tr=xi}}
 * Menominee: {{tt|mez|kōhkōs}}
