--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -220,7 +220,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Manx: {{t|gv|ellan|m|f}}, {{t|gv|innis|f}}, {{t|gv|innys|f}}, {{t|gv|insh|f}}
 * Maori: {{t|mi|motu}}
 * Mapudungun: {{t|arn|wapi}}
-* Maranao: {{t|mrw|molopolo}}
+* Maranao: {{t|mrw|polo}}, {{t|mrw|molopolo}}
 * Marathi: {{t|mr|बेट|sc=Deva}}
 * Mari:
 *: Eastern Mari: {{t|chm|отро}}
