--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 ===Etymology===
+{{root|en|ine-pro|*sem-|*meh₁-|*pel- (fold)}}
 From {{inh|en|enm|symple}}, {{m|enm|simple}}, from {{der|en|fro|-}} and {{der|en|fr|simple}}, from {{der|en|la|simplex|t=simple|lit=onefold}} (as opposed to {{m|la|duplex|lit=twofold|t=double}}), from {{m|la|semel|t=the same}} + {{m|la|plicō|t=I fold}}. See [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
 
 Partially displaced native English {{m|ang|onefold}}.
