/* Pronunciation */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <aboil#64124589>

--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -52,8 +52,8 @@
  
 ===Pronunciation===
 * {{IPA|sco|/əˈbəil/}}  
-* {{lb|sco|South Scots}} {{IPA|sco|/əˈbəɪl/}}  
- 
+* {{a|South}} {{IPA|sco|/əˈbəɪl/}}
+
 ===Adverb===
 {{sco-adv|-}}
  
