--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -90,7 +90,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 * Mòcheno: {{t|mhn|marmota|f}}
 * Navajo: {{t|nv|dilchaʼ}}
 * Norwegian: {{t|no|murmeldyr|n}}
-* Occitan: {{t+|oc|marmòta}}, {{t|oc|muret}}
+* Occitan: {{t+|oc|marmòta}}, {{t|oc|dormilhosa}}, {{t|oc|muret}}
 * Ottoman Turkish: {{t|ota|طاغ صیچانی|tr=dağ sıçanı}}
 * Persian: {{t|fa|مارموت|tr=mârmut}}
 * Polish: {{t+|pl|świstak|m}}, {{t|pl|świszcz|m}}
