--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -274,7 +274,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Latvian: {{t|lv|dzirnavas|f-p}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Macedonian: {{t|mk|млин|m}}, {{t|mk|ме́лница|f}}
-* Moroccan Amazigh: {{t|zgh|ⴰⵣⵔⴳ ⵏ ⵡⴰⵎⴰⵏ|m|tr=azrg n waman}} {{qualifier|turning vertically in mill race}}
+* Moroccan Amazigh: {{t|zgh|ⵎⴰⴽⵉⵏⴰ|f|tr=makina}} {{qualifier|working with gazoil or electricity}}
 * Norwegian:
 *: Bokmål: {{t+|no|mølle|m|f}}
 *: Nynorsk: {{t|nn|mylne|f}}, {{t+|no|mølle|f}}
