t+ary:[[رحة]] ([[WT:EDIT|Assisted]]) <mill#64132416>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -111,6 +111,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Adyghe: {{t|ady|шъхьалы}}
 * Albanian: {{t+|sq|thyese|f}}, {{t+|sq|mulli|m}}
 * Arabic: {{t|ar|مَطْحَنَة|f}}
+*: Moroccan Arabic: {{t|ary|رْحة|f|tr=rḥa}} {{qualifier|manual}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܪܚܝܐ|f|tr=raḥyā}}
 *: Hebrew: {{t|arc|רחיא|f|tr=raḥyā}}
