--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -243,6 +243,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 {{trans-bottom}}
 
 {{trans-top|building housing a grinding apparatus}}
+* Arabic:
+*: Moroccan Arabic: {{t|ary|تحونة|f|tr=təḥuna}}
 * Asturian: {{t+|ast|molín|m}}
 * Azerbaijani: {{t+|az|dəyirman}}
 * Bashkir: {{t|ba|тирмән|sc=Cyrl}}
