/* Translations */Added Swedish gender, fixed order <prisoner of war#64138547>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -57,8 +57,8 @@
 * Scottish Gaelic: {{t|gd|prìosanach-chogaidh|m}}
 * Slovak: {{t|sk|zajatec|m}}
 * Spanish: {{t|es|prisionero de guerra|m}}, {{t|es|prisionera de guerra|f}}
-* Swedish: {{t+|sv|krigsfånge}}
 * Swahili: {{t|sw|mfungwa wa vita}}
+* Swedish: {{t+|sv|krigsfånge|c}}
 * Tatar: {{t+|tt|әсир}}
 * Telugu: {{t|te|యుద్ధ ఖైదీ}}
 * Thai: {{t|th|เชลยศึก}}
