t+hil:[[huyop]] ([[WT:EDIT|Assisted]]) <blow#64145215>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -167,6 +167,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Greek: {{t+|el|φυσώ}}
 *: Ancient: {{t|grc|ἄημι}}
 * Higaonon: {{t|mba|hiyop}}
+* Hiligaynon: {{t|hil|huyop}}
 * Hungarian: {{t+|hu|fúj}}
 * Ido: {{t+|io|suflar}}
 * Indonesian: {{t+|id|tiup}}
