--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -218,6 +218,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 * Sundanese: {{t|su|tiup}}
 * Swahili: {{t|sw|puliza|alt=-puliza}}
 * Swedish: {{t+|sv|blåsa}}
+* Tagalog: {{t|tl|ihip}}
 * Tetum: {{t|tet|huu}}
 * Thai: {{t+|th|พัด}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
