--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -69,6 +69,7 @@ From {{m|en|public}} (originally, "[[communal]]" and contrasted with [[personal]
 
 {{trans-top|publicly administered school}}
 * Finnish: {{t|fi|[[yleinen]] [[koulu]]}}, {{t+|fi|peruskoulu}}
+* German: {{t|de|öffentliche Schule|f}}
 * Greek: {{t|el|δημόσιο σχολείο|n}}
 {{trans-mid}}
 * Khmer: {{t|km|សាលារដ្ឋ|tr=sala roth|sc=Khmr}}, {{t|km|សាលាសាធារណៈ|tr=sala satheraknak|sc=Khmr}}
