--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -73,7 +73,7 @@ Various alternative etymologies have also been proposed:
 # {{lb|zh|literary|or|dialectal}} [[moon]] {{zh-mw|m:輪}}
 # moon-[[shaped]] [[object]]s
 # {{lb|zh|literary}} [[moonlight]]
-# [[month]] {{zh-mw|個}}
+# [[month]] {{zh-mw|m,c:個|h:隻}}
 #: {{zh-syn|月份|號頭|q2=Wu|tr2=-}}
 # [[monthly]]
 #: {{zh-x|月薪|'''monthly''' wage}}
