--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -92,6 +92,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Latin: {{t|la|flectō}}, {{t|la|sinuō}}, {{t|la|curvō}}
 * Latvian: {{t|lv|saliekt}}
 * Lithuanian: {{t-needed|lt}}
+* Malayalam: {{t+|ml|വളയ്ക്കുക}}
 * Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}, {{t|mi|whatiwhati}} {{qualifier|Refers to bending the legs when running}}, {{t|mi|whakariroi}}
 * Middle English: {{t|enm|croken}}
 * Mongolian: {{t-needed|mn}}
