--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -125,7 +125,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Slovene: {{t+|sl|oglas|m}}, {{t|sl|reklama|f}}
 * Spanish: {{t+|es|anuncio|m}}, {{t+|es|publicidad|f}}, {{t+|es|reclamo|m}}, {{t+|es|aviso|m}}, {{t|es|aviso publicitario|m}}, {{t|es|anuncio publicitario|m}}
 * Swedish: {{t+|sv|annons}}, {{t+|sv|annonsering}}, {{t+|sv|reklam}}
-* Tagalog: {{t|tl|pamadya}}
+* Tagalog: {{t|tl|pamadya}}, {{t|tl|patalastas}}, {{t|tl|adbertisment}}
 * Tajik: {{t|tg|реклама}}, {{t|tg|таблиғ}}, {{t|tg|таблиғот}}, {{t|tg|иълон}}
 * Tamil: {{t+|ta|விளம்பரம்}}
 * Telugu: {{t|te|వ్యాపార ప్రకటన}}
