t+ceb:[[sungkod]] ([[WT:EDIT|Assisted]]) <staff#64169366>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -84,6 +84,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Armenian: {{t+|hy|ցուպ}}, {{t+|hy|ձեռնափայտ}}, {{t+|hy|գավազան}}
 * Basque: {{t|eu|haga}}
 * Catalan: {{t+|ca|bastó|m}}
+* Cebuano: {{t|ceb|sungkod}}
 * Chamicuro: {{t|ccc|chaskolo}}
 * Chinese:
 *: Mandarin: {{t+|cmn|桿|sc=Hani}}, {{t+|cmn|杆|tr=gǎn|sc=Hani}}, {{t+|cmn|棒|tr=bàng|sc=Hani}}, {{t+|cmn|杖|tr=zhàng|sc=Hani}}
