--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -214,7 +214,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 From {{der|ms|sa|भाषा||language}}.
 
 ===Pronunciation===
-* {{a|Johor-Riau}} {{IPA|ms|/bahasə/}}
+* {{a|Johor-Riau|Colloquial Singaporean}} {{IPA|ms|/bahasə/}}
 * {{a|Baku|Standard Singaporean}} {{IPA|ms|/bahasa/}}
 
 ===Noun===
