/* Translations */ <vote with one's feet#64177891>

--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -50,7 +50,7 @@
 * Polish: {{t|pl|głosować nogami}}
 * Portuguese: {{t|pt|votar com os pés}}
 * Russian: {{t+|ru|голосова́ть нога́ми}}
-* Spanish: {{t-needed|es}} largándose, marchándose, largándose 
+* Spanish: {{t-needed|es}} largándose, marchándose, arrancándose  
 * Swedish: {{t|sv|rösta med fötterna}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
