--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -5,7 +5,7 @@
 
 ===Etymology===
 {{root|en|ine-pro|*bʰendʰ-}}
-From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), fetter, restrain}}, from {{der|en|gem-pro|*bandijaną||to bend}}, from {{der|en|ine-pro|*bʰendʰ-||to bind, tie}}. Cognate with {{cog|gmh|benden||to fetter}}, {{cog|da|bænde||to bend}}, {{cog|no|bende||to bend}}, {{cog|fo|benda||to bend, inflect}}, {{cog|is|benda||to bend}}. More at {{l|en|band}}.
+From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), fetter, restrain}}, from {{inh|en|gmw-pro|*bandijan}}, from {{inh|en|gem-pro|*bandijaną|t=to bend}}, from {{der|en|ine-pro|*bʰendʰ-|t=to bind, tie}}. Cognate with {{cog|gmh|benden|t=to fetter}}, {{cog|da|bænde|t=to bend}}, {{cog|no|bende|t=to bend}}, {{cog|fo|benda|t=to bend, inflect}}, {{cog|is|benda|t=to bend}}. Related to {{m|en|band}}, {{m|en|bond}}.
 
 ===Pronunciation===
 * {{enPR|ĕnd}}, {{IPA|en|/bɛnd/}}
