t+ml:[[ക്രമീകരണം]] ([[WT:EDIT|Assisted]]) <adjustment#64189419>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -33,6 +33,7 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 * Finnish: {{t+|fi|säätäminen}}, {{t+|fi|säätö}}
 * German: {{t|de|Anpassen|n}}, {{t|de|[[geringfügiges]] [[Ändern]]|n}}
 * Hungarian: {{t+|hu|beállítás}}
+* Malayalam: {{t|ml|ക്രമീകരണം}}
 * Manx: {{t|gv|kiartagh|m}}, {{t|gv|cochiartagh|m}}
 {{trans-mid}}
 * Maori: {{t|mi|whakarerekētanga}}
