t+ml:[[വിജ്ഞാപനം]] ([[WT:EDIT|Assisted]]) <advertisement#64189438>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -160,6 +160,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Kyrgyz: {{t+|ky|жарыя}}
 * Latvian: {{t|lv|sludinājums|m}}
 * Macedonian: {{t|mk|о́глас|m}}
+* Malayalam: {{t+|ml|വിജ്ഞാപനം}}
 * Maori: {{t|mi|pānui}}, {{t|mi|whakaaturanga}}
 * Norwegian:
 *: Bokmål: {{t|nb|annonse|m}}
