Spanish: Add "Further reading" section with DRAE link (bot edit) <CD#64191461>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -396,6 +396,9 @@ From {{bor|es|en|CD}}.
 # [[#English|CD]], [[compact disc]]
 #: {{syn|es|disco compacto|compacto}}
 
+===Further reading===
+* {{R:DRAE}}
+
 ----
 
 ==Turkish==
