--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -48,3 +48,6 @@ From {{etyl|frm|en}} {{m|frm|indeterminable}}, from {{etyl|LL.|en}} {{m|la|indet
 {{es-adj}}
 
 # [[#English|indeterminable]]
+
+===Further reading===
+* {{R:DRAE}}
