--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -75,12 +75,13 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Estonian: {{t|et|murdosa}}
 * Finnish: {{t+|fi|murto-osa}}
 * French: {{t+|fr|fraction|f}}
+* Friulian: {{t|fur|frazion|f}}
 * German: {{t+|de|Bruchteil|m}}
 * Irish: {{t+|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: {{t|ja|断片|tr=だんぺん, danpen}}
-{{trans-mid}}
 * Lao: {{t|lo|ແຕ່ສ່ວນຫນຶ່ງ}}
+{{trans-mid}}
 * Latvian: {{t|lv|daļskaitlis|m}}
 * Macedonian: {{t|mk|дел|m}}, {{t|mk|делче|n}}
 * Maori: {{t|mi|hautanga}}
@@ -119,6 +120,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Estonian: {{t|et|segaarv}}
 * Finnish: {{t+|fi|murtoluku}} {{qualifier|ratio of two integers}}; {{t+|fi|suhdeluku}} {{qualifier|ratio of real numbers}}
 * French: {{t+|fr|fraction|f}}
+* Friulian: {{t|fur|frazion|f}}
 * Georgian: {{t|ka|წილადი}}
 * German: {{t+|de|Bruch|m}}
 * Greek: {{t+|el|κλάσμα|n}}
@@ -132,8 +134,8 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Japanese: {{t+|ja|分数|tr=ぶんすう, bunsū}}
 * Kazakh: {{t+|kk|бөлшек}}
 * Korean: {{t+|ko|분수}}
-* Kyrgyz: {{t+|ky|бөлчөк}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|бөлчөк}}
 * Lao: {{t|lo|ເສດສ່ວນ}}
 * Latin: {{t|la|fractiō|f}}
 * Latvian: {{t|lv|daļskaitlis|m}}
