/* Translations */ Added Piedmontese <fraction#64226225>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -86,6 +86,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Macedonian: {{t|mk|дел|m}}, {{t|mk|делче|n}}
 * Maori: {{t|mi|hautanga}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}
+* Piedmontese: {{t|pms|frassion|f}}
 * Plautdietsch: {{t|pdt|Bruchdeel|n}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
@@ -146,6 +147,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * Norwegian: {{t+|no|brøk|m}}
 *: Bokmål: {{t+|nb|brøk|m}}
 * Persian: {{t+|fa|کسر|tr=kasr}}
+* Piedmontese: {{t|pms|frassion|f}}
 * Polish: {{t+|pl|ułamek|m}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Romanian: {{t+|ro|fracție|f}}
