t+mdh:[[babuy]] t+tsg:[[{{t-needed}}]] t+aio:[[{{t-needed}}]] t+kht:[[{{t-needed}}]] t+phk:[[{{t-needed}}]] t+min:[[{{t-needed}}]] t-balance t+blt:[[{{t-needed}}]] t+tdd:[[{{t-needed}}]] t+tft:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <pig#64228734>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -93,6 +93,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Adyghe: {{tt|ady|къо}}, {{tt|ady|хъо}}
 * Afrikaans: {{tt+|af|vark}}
 * Agarabi: {{tt|agd|pon}}
+* Aiton: {{t-needed|aio}}
 * Aklanon: {{t|akl|baboy}}
 * Albanian: {{tt+|sq|derr|m}}, {{tt+|sq|thi|m}}
 * Ama: {{tt|amm|fu}}
@@ -224,6 +225,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Kannada: {{tt+|kn|ಹಂದಿ}}
 * Karelian: {{tt|krl|počči}}
 * Kazakh: {{tt+|kk|шошқа}}
+* Khamti: {{t-needed|kht}}
 * Khasi: {{tt|kha|sniang}}
 * Khmer: {{tt+|km|ជ្រូក}}
 * Kimaragang: {{tt|kqr|wogok}}
@@ -245,16 +247,17 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Lezgi: {{t|lez|вак}}
 * Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
-{{trans-mid}}
 * Lithuanian: {{tt+|lt|kiaulė|f}}
 * Livonian: {{tt|liv|sigā}}
 * Low German: {{tt+|nds|Swien|n}}
 * Ludian: {{tt|lud|šiga}}
+{{trans-mid}}
 * Luganda: {{tt|lg|embizzi}}
 * Lusitanian: {{tt|xls|porcom}}, {{tt|xls|porgom}}
 * Luxembourgish: {{tt|lb|Schwäin|n}}
 * Lü: {{tt|khb|ᦖᦴ}}
 * Macedonian: {{tt|mk|свиња|f}}
+* Maguindanao: {{t|mdh|babuy}}
 * Malagasy: {{tt+|mg|kisoa}}
 * Malay: {{tt+|ms|babi}}, {{tt+|ms|khinzir}}
 * Malayalam: {{tt+|ml|പന്നി}}
@@ -270,6 +273,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Mazanderani: {{tt|mzn|خی|tr=xi}}
 * Menominee: {{tt|mez|kōhkōs}}
 * Mi'kmaq: {{tt|mic|gulgwi's|an}}
+* Minangkabau: {{t-needed|min}}
 * Moksha: {{tt|mdf|тува}}
 * Mon: {{tt+|mnw|ကၠိက်}}
 * Mongolian:
@@ -306,6 +310,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Palauan: {{tt|pau|babii}}
 * Pashto: {{tt+|ps|خنځير|m|tr=xanjír}}, {{tt|ps|خوګ|m|tr=xug}}
 * Persian: {{tt+|fa|خوک|tr=xuk}}
+* Phake: {{t-needed|phk}}
 * Plautdietsch: {{tt+|pdt|Schwien|n}}
 * Polish: {{tt+|pl|świnia|f}}
 * Portuguese: {{tt+|pt|porco|m}}, {{tt+|pt|suíno|m}}
@@ -351,11 +356,15 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Sylheti: {{tt|syl|ꠉꠣꠠꠤꠀ}}, {{t|syl|ꠡꠥꠅꠞ}}
 * Tagal Murut: {{tt|mvv|bawi}}, {{tt|mvv|biag}}
 * Tagalog: {{tt+|tl|baboy}}
+* Tai Dam: {{t-needed|blt}}
+* Tai Nüa: {{t-needed|tdd}}
 * Tajik: {{tt+|tg|хук}}
 * Tamil: {{tt+|ta|பன்றி}}
 * Taos: {{tt|twf|kùciʼína}}
 * Tatar: {{tt+|tt|дуңгыз}}, {{tt+|tt|чучка}}
+* Tausug: {{t-needed|tsg}}
 * Telugu: {{tt+|te|పంది}}, {{tt+|te|సూకరము|m}}
+* Ternate: {{t-needed|tft}}
 * Tetum: {{tt|tet|fahi}}
 * Thai: {{tt+|th|หมู}}
 * Tibetan: {{tt|bo|ཕག་པ}}
