--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -321,6 +321,8 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Quechua: {{tt|qu|khuchi}}
 * Rabha: {{t|rah|বাক}}
 * Rapa Nui: {{tt|rap|oru}}
+* Rohingya: {{t-needed|rhg}}
+* Romagnol: {{t-needed|rgn}}
 * Romani: {{tt|rom|balo|m}}, {{tt|rom|bali|f}}
 * Romanian: {{tt+|ro|porc|m}}
 * Romansch: {{tt|rm|portg|m}}, {{tt|rm|piertg|m}}, {{tt|rm|püerch|m}}, {{tt|rm|chucal|m}}
