--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -218,7 +218,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Italian: {{tt+|it|maiale|m}}, {{tt+|it|porco|m}}, {{tt+|it|suino|m}}
 * Iu Mien: {{tt|ium|dungz}}
 * Japanese: {{tt+|ja|豚|tr=ぶた, buta}}, {{tt+|ja|ブタ|tr=buta}}
-* Javanese: {{tt+|jv|babi}}
+* Javanese: {{tt+|jv|ꦧꦧꦶ}}
 * Jeju: {{tt|jje|도새기|tr=dosaegi}}
 * Jingpho: {{tt|kac|wa'}}
 * Kabardian: {{tt|kbd|кхъуэ}}
