--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -27,26 +27,28 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 * {{sense|whistling marmot}} {{l|en|hoary marmot}}
 
 ====Derivatives====
-* {{l|en|bare-throated whistler}}
-* {{l|en|brown whistler}}
-* {{l|en|fawn-breasted whistler}}
-* {{l|en|Fiji whistler}}
-* {{l|en|Gilbert's whistler}}
-* {{l|en|golden whistler}}
-* {{l|en|grey whistler}}
-* {{l|en|olive whistler}}
-* {{l|en|mangrove golden whistler}}
-* {{l|en|New Caledonian whistler}}
-* {{l|en|red-lored whistler}}
-* {{l|en|regent whistler}}
-* {{l|en|rufous whistler}}
-* {{l|en|rusty whistler}}
-* {{l|en|Samoan whistler}}
-* {{l|en|Sclater's whistler}}
-* {{l|en|Tongan whistler}}
-* {{l|en|Vanuatu whistler}}
-* {{l|en|Vogelkop whistler}}
-* {{l|en|white-breasted whistler}}
+{{der4|en|title=Species of whistler, genus ''[[Pachycephala]]''
+|bare-throated whistler
+|brown whistler
+|fawn-breasted whistler
+|Fiji whistler
+|Gilbert's whistler
+|golden whistler
+|grey whistler
+|olive whistler
+|mangrove golden whistler
+|New Caledonian whistler
+|red-lored whistler
+|regent whistler
+|rufous whistler
+|rusty whistler
+|Samoan whistler
+|Sclater's whistler
+|Tongan whistler
+|Vanuatu whistler
+|Vogelkop whistler
+|white-breasted whistler
+}}
 
 ====Translations====
 {{trans-top|someone or something that whistles}}
