--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -13,7 +13,7 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 {{en-noun}}
 
 # Someone or something that [[whistle]]s, or who plays a [[whistle]] as a musical instrument.
-# Any of several [[passerine]] birds of the [[genus]] ''[[Pachycephala]]'', of [[Australasia]] and the western [[Pacific]].
+# Any of several [[passerine]] birds of the [[genus|genera]] ''[[Pachycephala]]'' and ''[[Coracornis]]'',  of [[Australasia]] and the western [[Pacific]].
 # Any [[bird]] that whistles or is noted for its whistling vocalisations (applied regionally to various specific species).
 #* {{RQ:Spenser Faerie Queene|book=II|canto=XII|passage=The lether-winged Bat, dayes enimy, / The ruefull Strich, still waiting on the bere, / The '''Whistler''' shrill, that who so heares, doth dy {{...}}}}
 # The [[goldeneye]] (certain ducks of genus ''[[Bucephala]]'').
