--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -167,6 +167,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Luxembourgish: {{t|lb|Gewiicht|n}}
 * Macedonian: {{t|mk|тежина|f|sc=Cyrl}}
 * Malay: {{t+|ms|berat}}
+* Malayalam: {{t+|ml|ഭാരം}}
 * Maori: {{t-needed|mi}}
 * Maranao: {{t|mrw|timbang}}
 * Mongolian: {{t+|mn|жин}}, {{t+|mn|дэнс}}
@@ -234,6 +235,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
 * Malay: {{t|ms|pemberat}}
+* Malayalam: {{t+|ml|ഭാരം}}
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Norwegian: {{t+|no|vekt}}
 * Old English: {{t|ang|ġewiht|n}}
