--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -405,6 +405,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Welsh: {{tt+|cy|mochyn|m}}
 * West Coast Bajau: {{tt|bdr|menungal}}, {{tt|bdr|ogok}}, {{tt|bdr|bakas}}
 * West Frisian: {{tt|fy|baarch|c}}
+* Western Bukidnon Manobo: {{t|mbb|bavuy}}
 * White Hmong: {{tt|mww|npua}}
 * Wolof: {{tt|wo|mbam-xuux|alt=mbam-xuux mi}}
 * Yakan: {{t-needed|yka}}
