/* Derived terms */Added more noun-phrases to Derived Terms <fraction#64246606>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -36,6 +36,10 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|decimal fraction}}
 * {{l|en|Egyptian fraction}}
 * {{l|en|field of fractions}}
+* {{l|en|fraction bar}}
+* {{l|en|fractional calculus}}
+* {{l|en|fractional ideal}}
+* {{l|en|fractional reserve banking}}
 {{rel-mid3}}
 * {{l|en|fractionner}}
 * {{l|en|fractionize}}
