--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -37,6 +37,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|Egyptian fraction}}
 * {{l|en|field of fractions}}
 * {{l|en|fraction bar}}
+* {{l|en|fraction slash}}
 * {{l|en|fractional calculus}}
 * {{l|en|fractional ideal}}
 * {{l|en|fractional reserve banking}}
