/* Derived terms */Added more Derived Terms <fraction#64246689>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -39,6 +39,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|fraction bar}}
 * {{l|en|fraction slash}}
 * {{l|en|fractional calculus}}
+* {{l|en|fractional distillation}}
 * {{l|en|fractional ideal}}
 * {{l|en|fractional reserve banking}}
 {{rel-mid3}}
@@ -52,6 +53,10 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|fractionally}}
 * {{l|en|fractionality}}
 * {{l|en|fractionalize}}
+* {{l|en|fractionalizing}}
+* {{l|en|fractionalization}}
+* {{l|en|fractionalism}}
+* {{l|en|fractionalist}}
 * {{l|en|improper fraction}}
 * {{l|en|ordinal fraction}}
 * {{l|en|partial fraction decomposition}}
