/* Related terms */Added more etmyologically related terms regarding "infringe" <fraction#64247076>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -89,6 +89,9 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|infraction}}
 * {{l|en|infringe}}
 * {{l|en|infringer}}
+* {{l|en|infringee}}
+* {{l|en|infringment}}
+* {{l|en|noninfringement}}
 {{rel-bottom}}
 
 ====Translations====
