/* Related terms */Added more etmyologically related terms of "infringe" <fraction#64247122>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -90,8 +90,10 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|infringe}}
 * {{l|en|infringer}}
 * {{l|en|infringee}}
-* {{l|en|infringment}}
+* {{l|en|infringement}}
 * {{l|en|noninfringement}}
+* {{l|en|infringeable}}
+* {{l|en|infringest}}
 {{rel-bottom}}
 
 ====Translations====
