--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -74,9 +74,15 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|fractious}}
 * {{l|en|fracture}}
 * {{l|en|fragment}}
-* {{l|en|fragile}}
 * {{l|en|frail}}
-* {{l|en|frangible}}
+* {{l|en|frailty}}
+* {{l|en|frailness}}
+* {{l|en|fragile}}
+* {{l|en|fragibility}}
+* {{l|en|fragileness}}
+* {{l|en|frangible}
+* {{l|en|frangibility}}
+* {{l|en|frangibleness}}
 {{rel-mid3}}
 * {{l|en|refract}}
 * {{l|en|refractive}}
@@ -95,7 +101,6 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{der|en|xno|-}}, {{der|en|fro|f
 * {{l|en|infringeable}}
 * {{l|en|infringest}}
 * {{l|en|infrangible}}
-* {{l|en|infrangibly}}
 * {{l|en|infrangibility}}
 * {{l|en|infrangibleness}}
 {{rel-bottom}}
