--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -145,6 +145,7 @@ Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdr
 * Swahili: {{t+|sw|funga|alt=kufunga}}
 * Swedish: {{t+|sv|binda}}
 * Thai: {{t+|th|โยง}}
+* Turkish: {{t+|tr|bağlamak}}
 * Ukrainian: {{t|uk|зв'я́зувати|impf}}, {{t|uk|зв'яза́ти|pf}}
 * Vietnamese: {{t+|vi|buộc}} ({{t|vi|纀|sc=Hani}}), {{t+|vi|cột}} ({{t|vi|縎|sc=Hani}}), {{t+|vi|trói}} ({{t|vi|𬗔|sc=Hani}})
 * West Frisian: {{t|fy|bine}}
