t+tl:[[kahinaang loob]] ([[WT:EDIT|Assisted]]) <pusillanimity#64337927>

--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -28,6 +28,7 @@
 {{trans-mid}}
 * Spanish: {{t|es|pusilanimidad|f}}
 * Swedish: {{t+|sv|räddhåga}}, {{t|sv|smomodighet}}, {{t+|sv|försagdhet}}
+* Tagalog: {{t|tl|kahinaang loob}}
 {{trans-bottom}}
 
 [[Category:English 6-syllable words]]
