--- a/en/p/PET.26237.wikitext
+++ b/en/p/PET.26237.wikitext
@@ -13,6 +13,9 @@ The name of the computer (sense 4) derives from the 1970s [[pet rock]] fad; the 
 # {{lb|en|countable|genetics}} {{acronym of|en|paired-end tag}}
 # {{lb|en|countable|historical|computing|[[backronym]]}} {{acronym of|en|[[w:Commodore PET|personal electronic transactor]]|nodot=1}}, a line of [[personal computer]]s produced by {{w|Commodore International}}.
 
+====Derived terms====
+* {{sense|computer}} {{l|en|PETSCII}}
+
 ====Translations====
 {{trans-see|polyethylene terephthalate}}
 
