--- a/en/p/PET.26237.wikitext
+++ b/en/p/PET.26237.wikitext
@@ -12,6 +12,7 @@ The name of the computer (sense 4) derives from the 1970s [[pet rock]] fad; the 
 # {{lb|en|countable}} {{acronym of|en|positron emission tomography}}
 # {{lb|en|countable|genetics}} {{acronym of|en|paired-end tag}}
 # {{lb|en|countable|historical|computing|[[backronym]]}} {{acronym of|en|[[w:Commodore PET|personal electronic transactor]]|nodot=1}}, a line of [[personal computer]]s produced by {{w|Commodore International}}.
+#* {{quote-book|en|author={{w|Nick Montfort}} et al.|title=10 PRINT CHR$(205.5+RND(1)); : GOTO 10|year=2014|publisher=MIT Press|pageurl=https://books.google.com/books?id=jr34DwAAQBAJ&pg=PA225&dq=%22PETSCII%22&hl=&cd=1&source=gbs_api#v=onepage&q=%22PETSCII%22&f=false|isbn=978-0-262-52674-6|page=225|passage=Why is the order of graphical characters in the PETSCII table so seemingly haphazard? The answer is that arrangement was dictated by the '''PET''' keyboard design, a hardware-driven decision.}}
 
 ====Derived terms====
 * {{sense|computer}} {{l|en|PETSCII}}
