--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -31,6 +31,7 @@
 * Japanese: {{t|ja|千秭|tr= せんじょ，senjo/せんし, senshi|sc=Jpan}}
 {{trans-mid}}
 * Malay: {{t|ms|oktilion}}
+* Maltese: {{t|mt|ottiljun}}, {{t|mt|kwadriljard|m}}
 * Polish: {{t+|pl|kwadryliard|m}}
 * Portuguese: {{t+|pt|octilhão}}
 * Russian: {{t+|ru|октиллион}}
