t+fi:[[lista]] ([[WT:EDIT|Assisted]]) <countdown#64354134>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -62,6 +62,7 @@ From {{compound|en|count|down}}.
 {{trans-bottom}}
 
 {{trans-top|a radio or television program counting down the top songs of a given week}}
+* Finnish: {{t+|fi|lista}}
 * French: {{t+|fr|hit-parade|m}}, {{t|fr|top 50|m}}
 {{trans-mid}}
 * German: {{t+|de|Countdown|m}}
