--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -51,7 +51,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #: {{ux|en|Many players tend to play timidly (not play many hands) around the '''bubble''', to keep their chips and last longer in the game.}}
 # A group of people who are in [[quarantine]] together.
 #* {{quote-journal|en|date=April 7, 2020|work=New Zealand Herald|title=Covid 19 coronavirus: Police called after Mt Eden landlord tries to move into flat during lockdown |author=|volume=|number=|passage="There was an empty room and this is my house," Mark Philip told the Herald. "Where am I supposed to go? Whose '''bubble''' am I supposed to infect?"}}
-
+# a [[travel bubble]]
 ====Synonyms====
 * {{l|en|bull}} {{q|obsolete}}
 
