--- a/en/r/reassignment.741529.wikitext
+++ b/en/r/reassignment.741529.wikitext
@@ -7,3 +7,6 @@
 {{en-noun|~}}
 
 # The act of [[reassign]]ing; a second or subsequent [[assignment]].
+
+====Derived terms====
+* {{l|en|sex reassignment surgery}}
