--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -313,6 +313,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Bulgarian: {{t+|bg|фреза|f}}
 * Finnish: {{t+|fi|puristin}}; {{t+|fi|mylly}} {{q|informal}}
 {{trans-mid}}
+* French: {{t+|fr|fraiseuse|f}}
 {{trans-bottom}}
 
 {{trans-top|raised or ridged edge or surface made in milling}}
