--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -139,6 +139,7 @@ From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} 
 *: Cyrillic: {{t|sh|залога|f}}, {{t|sh|завет|m}}, {{t|sh|завјет|m}}, {{t|sh|обећање|n}}, {{t|sh|присега|f}}
 *: Roman: {{t+|sh|zaloga|f}}, {{t+|sh|zavet|m}}, {{t+|sh|zavjet|m}}, {{t+|sh|obećanje|n}}, {{t+|sh|prisega|f}}
 * Slovene: {{t|sl|zaprisega|f}}, {{t|sl|zaobljuba|f}}
+* Spanish: {{t|es|promesa solemne|f}}, {{t+|es|compromiso|m}}
 * Swedish: {{t+|sv|underpant|c}}
 * Telugu: {{t+|te|ప్రతిజ్ఞ}}, {{t+|te|ప్రతిన}}
 {{trans-bottom}}
