tgloss:"yesintercenitaionut" ([[WT:EDIT|Assisted]]) <yeah#64470451>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -22,7 +22,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 
 =====Translations=====
 ''Note: Many languages have no exact equivalent of this word; in those cases, the translations given here are for'' '''yes'''.
-{{trans-top|yes}}
+{{trans-top|yesintercenitaionut}}
 * Azerbaijani: {{t|az|həri}}
 * Catalan: {{t+|ca|sí}}
 * Chinese:
