French: Added "Further reading" section with TLFi link (bot edit) <pupe#64482140>

--- a/en/p/pupe.802143.wikitext
+++ b/en/p/pupe.802143.wikitext
@@ -32,6 +32,9 @@ Borrowed from {{bor|fr|NL.|pupa}}, from a specialized use of {{der|fr|la|pūpa}}
 
 # a [[pupa]]
 
+===Further reading===
+* {{R:TLFi}}
+
 ----
 
 ==Italian==
