--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -7,7 +7,7 @@
 * {{alt|en|colledg|colledge||obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|college}}, from {{der|en|fro|college}}, from {{etyl|la|en}} {{m|la|collēgium}}.
+From {{inh|en|enm|college}}, from {{der|en|fro|college}}, from {{der|en|la|collēgium}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈkɒlɪd͡ʒ/}}
@@ -406,7 +406,7 @@ Written declension is more complicated due to the difficulty of combining "colle
 From {{bor|enm|fro|college}}, from {{der|enm|la|collēgium}}.
 
 ===Pronunciation===
-* {{IPA|enm|/kɔlˈɛːdʒ(ə)/|/kɔlˈaːdʒ(ə)/|/ˈkɔlɛdʒ(ə)/}}
+* {{IPA|enm|/kɔˈlɛːdʒ(ə)/|/kɔˈlaːdʒ(ə)/|/ˈkɔlɛdʒ(ə)/}}
 
 ===Noun===
 {{enm-noun|collegis}}
