--- a/en/p/petrogenetic.775493.wikitext
+++ b/en/p/petrogenetic.775493.wikitext
@@ -25,7 +25,7 @@ From {{bor|ro|de|petrogenetisch}} or {{bor|ro|en|petrogenetic}}.
 ===Adjective===
 {{ro-adj}}
 
-# {{l|en|petrogenetic}}
+# {{lb|ro|geology}} {{l|en|petrogenetic}}
 
 ====Declension====
 {{ro-decl-adj}}
