/* English */ add translation box <petrogenetic#64497129>

--- a/en/p/petrogenetic.775493.wikitext
+++ b/en/p/petrogenetic.775493.wikitext
@@ -12,6 +12,11 @@
 
 # {{lb|en|geology}} Of or pertaining to [[petrogenesis]], the creation of new rock.
 
+====Translations====
+{{trans-top|of or pertaining to petrogenesis}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====See also====
 * {{pedialite|petrogenesis}}
 
