--- a/en/p/petrogenetic.775493.wikitext
+++ b/en/p/petrogenetic.775493.wikitext
@@ -15,6 +15,7 @@
 ====Translations====
 {{trans-top|of or pertaining to petrogenesis}}
 {{trans-mid}}
+* Romanian: {{t+|ro|petrogenetic}}
 {{trans-bottom}}
 
 ====See also====
