/* Translations */ it happened again <petrogenetic#64497133>

--- a/en/p/petrogenetic.775493.wikitext
+++ b/en/p/petrogenetic.775493.wikitext
@@ -14,7 +14,7 @@
 
 ====Translations====
 {{trans-top|of or pertaining to petrogenesis}}
-* German: {{t|de|pe­t­ro­ge­ne­tisch}}
+* German: {{t|de|petrogenetisch}}
 {{trans-mid}}
 * Romanian: {{t+|ro|petrogenetic}}
 {{trans-bottom}}
