--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|of or pertaining to North Africa}}
+* Bengali: {{t|bn|উত্তর আফ্রিকীয়}}
 * Czech: {{t|cs|severoafrický}}
 * Danish: {{t|da|nordafrikansk}}
 * Dutch: {{t+|nl|Noord-Afrikaans}}
@@ -28,6 +29,7 @@
 
 ====Translations====
 {{trans-top|native or inhabitant of North Africa}}
+* Bengali: {{t|bn|উত্তর আফ্রিকী}}
 * Dutch: {{t+|nl|Noord-Afrikaan|m}}, {{t+|nl|Noord-Afrikaanse|f}}
 * German: {{t+|de|Nordafrikaner|m}}, {{t+|de|Nordafrikanerin|f}}
 * Ido: nord-Afrikano
