/* Derived terms */ <mundo#64505225>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -177,9 +177,22 @@ From {{inh|pt|roa-opt|mundo}}, from {{inh|pt|la|mundus||world}}.
 {{seeCites|pt}}
 
 ====Derived terms====
-* {{l|pt|mundinho}}, {{l|pt|mundozinho}} {{gloss|diminutives}}
-* {{l|pt|mundão}} {{gloss|augmentative}}
-{{der3|pt|correr mundo|do outro mundo|ir para o outro mundo|meio mundo|não ser deste mundo|novo mundo|o melhor dos mundos|primeiro mundo|prometer mundos e fundos|segundo mundo|terceiro mundo|todo mundo|velho mundo|vir o mundo abaixo}}
+* {{l|pt|correr o mundo}}
+* {{l|pt|do outro mundo}}
+* {{l|pt|ir para o outro mundo}}
+* {{l|pt|meio mundo}}
+* {{l|pt|mundão}} (augmentative)
+* {{l|pt|mundinho}} (diminutive)
+* {{l|pt|não ser deste mundo}}
+* {{l|pt|novo mundo}}
+* {{l|pt|o melhor dos mundos}}
+* {{l|pt|primeiro mundo}}
+* {{l|pt|prometer mundos e fundos}}
+* {{l|pt|segundo mundo}}
+* {{l|pt|terceiro mundo}}
+* {{l|pt|todo mundo}}
+* {{l|pt|velho mundo}}
+* {{l|pt|vir o mundo abaixo}}
 
 ====Related terms====
 * {{l|pt|mapa múndi}}
