--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -14,7 +14,7 @@
 * {{alter|it|abbaco||uncommon, except in the meaning of “art of counting”}}
 
 ===Etymology===
-From {{etyl|la|it}} {{m|la|abacus||counting board}}, from {{etyl|grc|it}} {{m|grc|ἄβαξ||board}}.
+From {{der|it|la|abacus||counting board}}, from {{der|it|grc|ἄβαξ||board}}.
 
 ===Pronunciation===
 * {{it-IPA|àbaco}}
