/* English */ <first-passage time#64515467>

--- a/en/f/first-passage time.801868.wikitext
+++ b/en/f/first-passage time.801868.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|head=[[first]]-[[passage]] [[time]]}} (''Abbreviated as'': [[FPT]])
+{{en-noun|head=[[first]]-[[passage]] [[time]]}}
 
 # {{lb|en|mathematics}} The time taken for a [[random walker]] to reach a specified [[target]]
+#: {{syn|en|q1=abbreviation|FPT}}
