--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -28,10 +28,10 @@ Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml
 # {{lb|en|obsolete}} A [[gibbet]].
 #: {{rfquotek|en|Edmund Spenser}}
 # {{lb|en|obsolete}} A support beam consisting of a post with a cross-beam resting upon it; a bracket or truss consisting of a vertical piece, a horizontal piece, and a strut.
-# A shepherd's crook; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
+# A shepherd's crook; a specialized [[staff]] with a semi-circular bend (a "hook") at one end used by [[shepherd]]s to control their herds.
 #* '''1970''', ''The New English Bible with the Apocrypha, Oxford Study Edition'', published 1976, Oxford University Press, ''Psalms'' 23-4, p.583:
 #*: Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
-# A bishop's staff of office.
+# A [[bishop]]'s standard staff of office.
 # An [[artifice]]; a [[trick]]; a [[contrivance]].
 #* '''c. 1547''', {{w|Thomas Cranmer}}, ''Against Transubstantiation''
 #*: for all your brags, hooks, and '''crooks'''
