--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -52,6 +52,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Aromanian: {{t|rup|fluiarã|f}}, {{t|rup|fluearã|f}}, {{t|rup|fluir|n}}
 * Asturian: {{t|ast|xiblatu|m}}
 * Azerbaijani: {{t+|az|fit}}
+* Bashkir: {{t|ba|һыҙғыртҡыс}}
 * Belarusian: {{t|be|свісто́к|m|sc=Cyrl}}
 * Breton: {{t+|br|c'hwitell|f}}, {{t+|br|c'hwitelloù|p}}
 * Bulgarian: {{t+|bg|свирка|f|sc=Cyrl}}
