--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -188,10 +188,35 @@ From {{der|hu|la|-um||2nd declension neuter nominative singular termination}}.
 ===Pronunciation===
 * {{la-IPA|um}}
 
-===Suffix===
+===Etymology 1===
+From {{inh|la|itc-pro|*-om}}, from {{inh|la|ine-pro|*-om|pos=thematic masculine singular accusative and neuter singular nominative and accusative ending}}
+
+====Alternative forms====
+* {{alter|la|-om}} (''conditioned variant used after '' -v-, -qu-, -gu-, -u- ''up through the middle of the first century AD'')
+
+====Suffix====
 {{la-suffix-form|-um}}
 
 # {{inflection of|la|-us||acc|m|s|;|nom//acc//voc|n|s}}
+
+===Etymology 2===
+From {{inh|la|itc-pro|*-om}}, from {{inh|la|ine-pro|*-oHom|pos=genitive plural ending}}
+
+====Alternative forms====
+* {{alter|la|-ûm}} (''formerly used in New Latin on words of the first and second declension; see usage notes'')
+
+====Suffix====
+{{head|la|suffix|head=-um|cat2=inflectional suffixes}}
+
+# {{n-g|genitive plural ending}}
+
+====Usage notes====
+Latin genitive plural forms take the ending ''-um'' either by itself or with additional preceding material (generally determined by the word's conjugation class). First and second declension nouns and adjectives usually have genitive plural forms ending in ''-ārum'' and ''-ōrum'', but in some contexts take the short ending ''-um'' (without preceding ''-ār-/-ōr-'') instead: this is common with words denoting weights and measures and with distributive numerals.<ref>[https://www.google.com/books/edition/A_Grammar_of_the_Latin_Language_from_Pla/KYpfAAAAMAAJ?hl=en&gbpv=1&pg=PA124&printsec=frontcover A Grammar of the Latin Language from Plautus to Suetonius], Volume 1, Henry John Roby (1872), page 124</ref>
+
+In New Latin texts, the genitive plural suffix ''-um'' was formerly often spelled with an accent as ''-ûm'' when it appears in place of ''-ōrum'' in second-declension genitive plural forms (such as ''deûm''). This circumflexed spelling appears to have been motivated by the reinterpretation of the ending as a contraction of ''-ōrum'' (this interpretation is not etymologically accurate: ''-ōrum'' is in fact an extension of the original genitive plural ending ''-um''). Other factors that potentially reinforced the use of the spelling ''-ûm'' are influence from the spelling of Greek genitive plural forms ending in -ῶν or desire to disambiguate genitive plural forms from accusative singular forms which would otherwise be spelled the same.
+
+====References====
+<references/>
 
 ----
 
