--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -45,6 +45,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 {{trans-mid}}
 * Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
 *: Bokmål: {{t+|nb|ja}}, {{t|nb|yeah}}, {{t+|nb|ja vel}}
+*: Nynorsk: {{t+|nn|ja}}, {{t|nn|yeah}}, {{t|nn|ja vel}}
 * Old Church Slavonic: {{t|cu|ⰵⰹ}}
 * Persian: {{t+|fa|بله|tr=bale}}, {{t+|fa|آره|tr=âre|sc=fa-Arab}}
 * Polish: {{t+|pl|tak}}, {{t+|pl|no}}<!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->, {{t+|pl|aha|m}},  {{t+|pl|ta|m}} {{qualifier|colloquial}}
