--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -11,7 +11,7 @@
 * {{rhymes|en|ædʒə(ɹ)|s=2}}
 
 ===Etymology 1===
-From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, referring to the animal's badge-like white blaze, equivalent to {{af|en|badge|-ard|nocat=1}}.
+From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, referring to the animal's badge-like white blaze, equivalent to {{af|en|badge|-ard|nocat=1}}. Displaced earlier {{m|en|brock}}, from {{ncog|ang|brocc}}.
 
 ====Noun====
 [[Image:Meles meles MHNT.jpg|thumb|a [[Eurasian badger]]]]
