--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -224,7 +224,9 @@ Latin genitive plural forms take the ending ''-um'' either by itself or with add
 ** in dactylic verse, compounds of ''-cola'' and ''-gena''
 ** some masculine Greek proper nouns, such as patronymics
 
-In New Latin texts, the genitive plural suffix ''-um'' was formerly often spelled with an accent as ''-ûm'' when it appears in place of ''-ōrum'' or ''-ārum'' (as in ''deûm'' or ''amphorûm''). This circumflexed spelling appears to have been motivated by the reinterpretation of the ending as a contraction of ''-ōrum'' (this interpretation is not etymologically accurate: ''-ōrum'' is in fact an extension of the original genitive plural ending ''-um''); for the same reason, it can be found spelled as -ūm in some sources that use macrons to mark long vowels, such as Lewis and Short's ''Latin Dictionary.'' Other factors that potentially reinforced the use of the spelling ''-ûm'' are influence from the spelling of Greek genitive plural forms ending in -ῶν or desire to disambiguate genitive plural forms from accusative singular forms which would otherwise be spelled the same.
+In New Latin texts, the genitive plural suffix ''-um'' was formerly often spelled with an accent as ''-ûm'' when it appears in place of ''-ōrum'' or ''-ārum'' (as in ''deûm'' or ''amphorûm''). This circumflexed spelling appears to have been motivated by the reinterpretation of the ending as a contraction of ''-ōrum/-ārum'', leading to the assumption that the final syllable in forms like ''amphorum'' contained a long vowel. For the same reason, it can be found spelled as ''-ūm'' in some sources that use macrons to mark long vowels, such as Lewis and Short's ''Latin Dictionary.'' However, this interpretation is outdated: according to modern etymological understanding, all Latin words ending in ''-um'', regardless of which declension they belong to, had a short vowel in the final syllable in Classical Latin pronunciation<ref>Piet Steenbakkers, ''Spinoza's Ethica from Manuscript to Print: Studies on text, form and related topics'', 1994, [https://books.google.com/books?id=WpLyabFPAYkC&pg=PA78#v=onepage&q&f=false page 78]</ref>.
+
+Other factors that may have contributed to the use of the spelling ''-ûm'' are influence from the spelling of Greek genitive plural forms ending in -ῶν or desire to disambiguate genitive plural forms from accusative singular forms which would otherwise be spelled the same.
 
 ====References====
 <references/>
