--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -137,6 +137,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Emilian: {{t|egl|îsla|f}}
 * Esperanto: {{t+|eo|insulo}}
 * Estonian: {{t+|et|saar}}
+* Even: {{t|eve|букчан}}
 * Ewe: {{t|ee|ƒukpo}}
 * Extremaduran: {{t-needed|ext}}
 * Faroese: {{t+|fo|oyggj|f}}, {{qualifier|small island, or river-island}} {{t|fo|hólmur|m}}
@@ -236,6 +237,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 *: Uyghurjin: {{t|mn|ᠠᠷᠠᠯ}}
 * Mwani: {{t|wmw|kisirwa}}
 * Nahuatl: {{t|nah|tlālhuāctli}}
+* Nanai: {{t|gld|боачан}}
 * Nepali: {{t|ne|द्वीप|m}}, {{t|ne|टापू}}
 * Ngazidja Comorian: {{t|zdj|siwa|c5|c6}}
 * Niuean: {{t|niu|motu}}
