--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -201,7 +201,7 @@ Partially displaced native English {{m|ang|onefold}}.
 
 {{trans-top|simple-minded}}
 * Armenian: {{t+|hy|պարզամիտ}}, {{t+|hy|միամիտ}}
-* Bulgarian: {{t+|bg|прост|m}}, {{t+|bg|малоу́мен|m}}
+* Bulgarian: {{t+|bg|наивен}}, {{t+|bg|простодушен}}
 * Dutch: {{t+|nl|achterlijk}}, {{t+|nl|simpel}}
 * Esperanto: {{t|eo|simplanima}}
 * French: {{t+|fr|simple|m|f}}
