--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -19,6 +19,7 @@ From {{inh|nl|dum|wasschen}}, from {{inh|nl|odt|wascan}}, from {{inh|nl|gem-pro|
 
 =====Derived terms=====
 * {{l|nl|afwassen}}
+* {{l|nl|bewassen}}
 * {{l|nl|verwassen}}
 * {{l|nl|wasbeurt}}
 * {{l|nl|wasgelegenheid}}
@@ -44,6 +45,7 @@ From {{inh|nl|dum|wassen}}, from {{inh|nl|odt|wassan}}, from {{inh|nl|gem-pro|*w
 {{nl-conj-st|class=7|was|wies|wassen|wasse|trans=unacc}}
 
 =====Derived terms=====
+* {{l|nl|bewassen}}
 * {{l|nl|gewas}}
 * {{l|nl|verwassen}}
 * {{l|nl|volwassen}}
@@ -73,6 +75,7 @@ From {{affix|nl|was|-en|id2=denominative}}.
 {{nl-conj-wk|was|wasse|trans=acc}}
 
 =====Derived terms=====
+* {{l|nl|bewassen}}
 * {{l|nl|verwassen}}
 
 ----
