--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -251,7 +251,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Plautdietsch: {{t|pdt|Dinkj|n}}, {{t|pdt|Sach|f}}
 * Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
-* Portuguese: {{t+|pt|coisa|f}}, {{t+|pt|cousa|f}}
+* Portuguese: {{t+|pt|coisa|f}}
 * Punjabi: {{t|pa|ਵਸਤੂ|f}}
 * Quechua: {{t+|qu|ima}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
