t+pl:[[agent]] t+pl:[[agentka]] ([[WT:EDIT|Assisted]]) <literary agent#64635658>

--- a/en/l/literary agent.776088.wikitext
+++ b/en/l/literary agent.776088.wikitext
@@ -10,6 +10,7 @@
 {{trans-top|person who represents writers}}
 * Czech: {{t|cs|literární agent|m}}
 {{trans-mid}}
+* Polish: {{t+|pl|agent|m}}, {{t+|pl|agentka|f}}
 {{trans-bottom}}
 
 [[Category:English 6-syllable words]]
