Fixed: Moved Declension one level below Adjective <bled#64649334>

--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -34,7 +34,7 @@ From {{bor|en|fr|bled}}, from {{der|en|arq|-}}, from {{der|en|ar|بِلَاد}}.
 
 # {{inflection of|cs|bledý||m|s|nominal|predicative}}
 
-===Declension===
+====Declension====
 {{cs-decl-pron-adj
 | snomma = bled
 | snomm = bled
